[package]
name = "diplomatic-bag"
description = "A wrapper type that allows you to send `!Send` types to different threads."
version = "0.3.0"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Skepfyr/DiplomaticBag"
readme = "README.md"
keywords = ["send", "sync"]
categories = ["rust-patterns", "concurrency"]

exclude = [".github"]

[dependencies]
crossbeam-channel = "0.5"
once_cell = "1"

[dev-dependencies]
rand = "0.8"
slotmap = "1"
static_assertions = "1"
version-sync = "0.9"
